--- a/foundation/main/templates/main/index.html
+++ b/foundation/main/templates/main/index.html
@@ -5,7 +5,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Foundation</title>
+    <title>Fondation</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,13 +13,53 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Orbitron:wght@400;500;600;700;800&display=swap"> 
-
+    <link rel="stylesheet" href="{% static '/css/main.css' %}">
   </head>
+
   <body>
+    <div class="container">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
+          <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+            <span class="fs-4">Fondation</span>
+          </a>
+        </header>
+      </div>
 
-    <h1>Foundation</h1>
-    <p>Bienvenue dans la fondation</p>
 
+
+
+    <div class="container">
+        <div class="title">
+            <h1>Cycle de Fondation</h1>
+            <p>Personnages du livre Fondation d'Isaac Asimov</p>
+        </div>
+        <div class="box-chars">
+            <table class="table table-borderless">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Prénom</th>
+                    <th scope="col">Nom</th>
+                    <th scope="col">Tag</th>
+                  </tr>
+                </thead>
+                <tbody>
+                {% for char in chars %}
+                  <tr>
+                    <th scope="row">{{char.id}}</th>
+                    <td>{{char.name}}</td>
+                    <td>{{char.lastname}}</td>
+                    <td>@{{char.name}}</td>
+                  </tr>
+                {% endfor %}
+                </tbody>
+              </table>
+
+        </div>
+
+    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
